Dark mode minor fix

--- a/assets/less/misc/dark.less
+++ b/assets/less/misc/dark.less
@@ -8,7 +8,7 @@
     -moz-osx-font-smoothing: grayscale;
   }
 
-  a:not(.post-tag):not(.post-link):not(.author-name-link),
+  a:not(.post-tag):not(.post-link),
   h1, h2, h3, h4, h5, h6,
   figcaption,
   .logo-text,
